# commodity-curve-factors

./: .env.example  .gitignore  Makefile  README.md  RESEARCH_FINDINGS.md  pyproject.toml  requirements.txt
configs/: backtest.yaml  curve.yaml  evaluation.yaml  factors.yaml  inventory.yaml  strategy.yaml  universe.yaml
notebooks/: 01_data_exploration.ipynb  01_data_pipeline.ipynb  02_curve_construction.ipynb  02_curve_features.ipynb  03_factor_modeling.ipynb  04_strategy_backtest.ipynb  05_results_analysis.ipynb
results/tables/: performance_summary.parquet  stress_tests.parquet
scripts/: deep_audit.py  generate_figures.py  run_pipeline.py  signal_recovery.py  strategy_variants.py
scripts/probes/: new_commodities_probe.json  universe_additions.yaml  wrds_download_all.py  wrds_download_new.py  wrds_probe_new_commodities.py  wrds_schema_probe.py  wrds_schema_reference.json
src/: __init__.py
src/backtesting/: __init__.py  backtest_engine.py
src/config/: __init__.py  settings.yaml
src/data_pipeline/: __init__.py  load_data.py
src/features/: __init__.py  curve_features.py
src/models/: __init__.py  garch_model.py  hmm_model.py  pca_model.py
src/trading/: __init__.py  factor_strategy.py
src/utils/: __init__.py  visualization.py
tests/: test_data_integrity.py  test_factor_computation.py  test_model_convergence.py  test_strategy_performance.py
tests/fixtures/: cftc_sample.csv  wrds_sample.parquet
tests/unit/: test_attribution.py  test_benchmarks.py  test_bootstrap.py  test_calendar_spreads.py  test_capacity.py  test_cftc_loader.py  test_combination.py  test_combined_strategy.py  test_config.py  test_convenience_yield.py  test_costs.py  test_curve_builder.py  test_curve_metrics.py  test_curve_regime.py  test_curve_transition.py  test_directional.py  test_engine.py  test_eval_metrics.py  test_factor_analysis.py  test_factor_carry.py  test_factor_curvature.py  test_factor_curve_momentum.py  test_factor_slope.py  test_futures_loader.py  test_interpolation.py  test_inventory_factor.py  test_inventory_loader.py  test_macro_factor.py  test_macro_loader.py  test_momentum_ts.py  test_momentum_xs.py  (+20 more)
website/: index.html
(+70 files in other folders)
